arrange alignment  as suggersted by the last correction of tse

--- a/css/style.css
+++ b/css/style.css
@@ -126,8 +126,8 @@ form label {
 }
 
 .middle-footer img {
-  width: 100px;
-  height: 60px;
+  width: 40px;
+  height: 20px;
   margin: 0 5px;
 }
 
